# pacgrade

./: CMakeLists.txt  PKGBUILD
src/: ALPMList.h  main.cpp
